fixed stop song issue + added volume control , prev song btn and choose song by name

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "rules": {
         "quotes": "off",
         "no-console" : "warn",
-        "prefer-destructuring": "off"
+        "prefer-destructuring": "off",
+        "jsx-a11y/label-has-associated-control": "off"
     }
 }
