--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,26 +1,19 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": [
-        "plugin:react/recommended",
-        "airbnb",
-        "plugin:prettier/recommended"
-    ],
-    "overrides": [
-    ],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react"
-    ],
-    "rules": {
-        "quotes": "off",
-        "no-console" : "warn",
-        "prefer-destructuring": "off",
-        "jsx-a11y/label-has-associated-control": "off"
-    }
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": ["plugin:react/recommended", "airbnb", "prettier"],
+  "overrides": [],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": ["react"],
+  "rules": {
+    "quotes": "off",
+    "no-console": "warn",
+    "prefer-destructuring": "off",
+    "jsx-a11y/label-has-associated-control": "off"
+  }
 }
