--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,9 @@
     "quotes": "off",
     "no-console": "warn",
     "prefer-destructuring": "off",
-    "jsx-a11y/label-has-associated-control": "off"
+    "jsx-a11y/label-has-associated-control": "off",
+    "prefer-const": "warn",
+    "no-use-before-define": "error",
+    "camelcase": "off"
   }
 }
